src/scss/06_components/pages/_news-page.scss
@use 'sass:math';

// Fix sidebar width when there are only short news titles
// TODO: REGIONS Clean this up with other region things
$-card-teaser-img-aspect-ratio: math.div(3, 2);
$-card-teaser-min-width: 280px;

.page-type--news-item .sidebar-first {
  display: block;
}

.news-listing {
  margin-top: 0;
  padding-inline-start: 0;
  padding-top: 0;
}

.news-listing__item {
  list-style: none;
  margin-top: $spacing-and-half;
  position: relative;
}

.news-listing__link {
  display: block;
  text-decoration: none;

  &:focus,
  &:hover {
    text-decoration: underline;
  }

  &::after {
    bottom: 0;
    content: '';
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
  }
}

.news-listing__title {
  margin-top: 0;
}

.news-listing__datetime {
  @include font('small');
  color: $color-black-60;
}

.components--news {
  margin-top: 0;
}

// News listings using tiny-teasers.
.news-listing--latest-tiny-teasers {
  .news-listing__item {
    border-bottom: 1px solid var(--color-black-10);
    display: flex;
    margin-top: $spacing;
    padding-bottom: $spacing-half;
  }
}

.news-listing__tiny-teaser .news-listing__title {
  @include font('special.large_link');
  margin-bottom: $spacing-half;
}

// News listings using medium teasers.
.news-listing--latest-medium-teasers {
  padding-inline-start: 0; // User agent stylesheet override

  @include breakpoint($breakpoint-m) {
    display: flex;
    flex-wrap: wrap;
  }

  .news-listing__item {
    &:first-child {
      margin-top: 0;
    }

    &:nth-child(2) {
      @include breakpoint($breakpoint-m) {
        margin-top: 0;
      }
    }

    @include breakpoint($breakpoint-m) {
      margin-top: $spacing-double;
      padding-inline-end: $spacing-and-half;
      width: 50%;
    }
  }
}

.news-listing__medium-teaser {
  border-inline-start: 4px solid var(--hdbt-color-palette--accent);
  padding-inline-start: $spacing;

  @include breakpoint($breakpoint-l) {
    padding-inline-start: $spacing-and-half;
  }

  .news-listing__title {
    @include font(h5);

    @include breakpoint($breakpoint-l) {
      @include font(h4);
    }
  }

  .news-listing__datetime {
    display: block;
    margin-top: $spacing;

    @include breakpoint($breakpoint-l) {
      margin-top: $spacing-and-half;
    }
  }
}

// News listing using teasers.
.news-listing--teasers {
  max-width: $content-width-max;

  .news-listing__item {
    align-items: flex-start;
    border-bottom: 1px solid $color-silver-light;
    display: flex;
    flex-wrap: wrap;
    padding-bottom: $spacing-and-half;
    position: relative;

    &:first-child {
      margin-top: $spacing-and-half;
    }

    &:last-child {
      border-bottom: none;
      padding-bottom: 0;
    }
  }

  .news-listing__content {
    width: 100%;

    @include breakpoint($breakpoint-m) {
      padding-inline-end: $spacing-and-half;
      width: 75%;
    }
  }

  .news-listing__content--with-image {
    padding-inline-end: $spacing-and-half;
    width: 75%;
  }

  .news-listing__img {
    @include loading-image-background;
    width: 25%;

    img {
      display: block;
      height: auto;
      width: 100%;
    }
  }

  .news-listing__title {
    @include font('h4');
  }

  .news-listing__datetime {
    @include font(small);
    display: block;
    margin-top: $spacing-half;

    @include breakpoint($breakpoint-l) {
      margin-top: $spacing;
    }
  }
}

.news-listing--card-teasers {
  padding-inline-start: 0; // User agent stylesheet override

  @include breakpoint($breakpoint-m) {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-inline-end: -#{$spacing-and-half};
  }

  .news-listing__item {
    @include breakpoint($breakpoint-m) {
      width: 50%;
    }

    @include breakpoint($breakpoint-l) {
      width: 25%;
    }
  }

  .news-listing__card-teaser {
    height: 100%;
  }
}

.news-listing__card-teaser {
  border-bottom: 1px solid var(--color-black-5);
  display: flex;
  padding-bottom: $spacing;
  position: relative;

  &:hover .hel-icon--arrow-right {
    transform: scaleX(var(--lang-direction, 1)) translateX($spacing-quarter);

    @media (prefers-reduced-motion) {
      transform: none;
    }
  }

  @include breakpoint($breakpoint-m) {
    border: 1px solid var(--color-black);
    flex-direction: column;
    margin-inline-end: $spacing-and-half;
    padding-bottom: 0;
  }

  .news-listing__title {
    @include font('h5');

    // The card style changes already on breakpoint-m so we need to switch to larger
    // h5-style earlier.
    @include breakpoint($breakpoint-m) {
      font-size: remify(20px);
      line-height: 30 / 20;
    }
  }

  .news-listing__img {
    position: relative;
    width: 40%;

    @include breakpoint($breakpoint-m) {
      width: unset;
    }

    img {
      display: block;
      height: auto;
      width: 100%;
    }
  }

  .image-placeholder {
    padding-bottom: aspect-ratio-padding($-card-teaser-img-aspect-ratio);
  }

  .news-listing__text-container {
    display: flex;
    flex-direction: column;
    height: 100%;
    padding-inline-start: $spacing;
    width: 60%;

    @include breakpoint($breakpoint-m) {
      padding: $spacing;
      width: unset;
    }
  }

  .news-listing__title,
  .news-listing__datetime {
    margin-bottom: $spacing-half;
  }

  .news-listing__datetime {
    display: flex;
    flex-grow: 1;
  }

  .hel-icon--arrow-right {
    @include hover-link-arrow-transition;
    display: none;
    height: $spacing-triple;
    pointer-events: none;
    transform: scaleX(var(--lang-direction, 1));
    width: $spacing-triple;

    @include breakpoint($breakpoint-m) {
      display: inline-block;
    }
  }
}

.news-listing--sidebar {
  margin-bottom: $spacing-quadruple;

  .link__read-more-news {
    align-items: center;
    display: flex;
    text-decoration: none;

    .hel-icon--arrow-right {
      @include hover-link-arrow-transition;
      height: $spacing-and-half;
      margin-inline-start: $spacing-quarter;
      transform: scaleX(var(--lang-direction, 1));
      width: $spacing-and-half;
    }

    &:focus,
    &:hover {
      text-decoration: underline;

      .hel-icon {
        transform: scaleX(var(--lang-direction, 1)) translateX($spacing-quarter);

        @media (prefers-reduced-motion) {
          transform: none;
        }
      }
    }
  }
}

.news-archive__heading {
  @include font('h3');
  border-bottom: 2px solid $color-black;
  display: flex;
  flex-flow: column;
  justify-content: space-between;
  margin-top: 0;
  padding-bottom: $spacing-and-half;
  width: 100%;

  @include breakpoint($breakpoint-m) {
    flex-flow: row;
  }
}

.news-archive__feed-link {
  @include font('button');
  align-items: self-end;
  display: flex;
  padding-top: $spacing;
  position: relative;

  @include breakpoint($breakpoint-m) {
    padding-top: 0;
  }

  .link {
    display: block;
    margin-inline-start: $spacing-quarter;
    text-decoration: none;
    
    &::after {
      bottom: 0;
      content: "";
      left: 0;
      position: absolute;
      right: 0;
      top: 0;
    }

    .link-text:after {
      @include pseudo-icon('link-external');
      @include hover-link-arrow-transition;
      margin-inline-start: $spacing-quarter;
      pointer-events: none;
    } 

    &:focus-within .link-text::after,
    &:hover .link-text::after {
      transform: translate($spacing-quarter, -$spacing-quarter);
  
      @media (prefers-reduced-motion) {
        transform: none;
      }
    }
  }
}

